Correções realizadas e homework concluído