@@ -2,6 +2,7 @@ package br.com.vemser.pessoaapi.service;
 
 import br.com.vemser.pessoaapi.dto.EnderecoCreateDTO;
 import br.com.vemser.pessoaapi.dto.EnderecoDTO;
+import br.com.vemser.pessoaapi.dto.PessoaDTO;
 import br.com.vemser.pessoaapi.entity.Endereco;
 import br.com.vemser.pessoaapi.entity.Pessoa;
 import br.com.vemser.pessoaapi.exceptions.RegraDeNegocioException;
@@ -11,7 +12,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -29,36 +29,56 @@ public class EnderecoService {
     private ObjectMapper objectMapper;
 
     public List<EnderecoDTO> list() {
+        log.info("Listado todos os endereços");
         return enderecoRepository.list().stream()
                 .map(endereco -> objectMapper.convertValue(endereco, EnderecoDTO.class))
                 .collect(Collectors.toList());
+    }
+
+    public EnderecoDTO listEnderecoByIdEndereco(Integer idEndereco) throws RegraDeNegocioException {
+        log.info("Listado endereço pelo idEndereço");
+        Endereco enderecoEntity = verifyEnderecoById(idEndereco);
+        return objectMapper.convertValue(enderecoEntity, EnderecoDTO.class);
     }
 
     public EnderecoDTO create(Integer idPessoa, EnderecoCreateDTO endereco) throws RegraDeNegocioException {
         Pessoa pessoa = pessoaService.verifyByIdPessoa(idPessoa);
         log.info("Criando um endereço para a pessoa: " + pessoa.getNome());
         endereco.setIdPessoa(idPessoa);
+        // --- ENTRADA ---
         Endereco enderecoEntity = objectMapper.convertValue(endereco, Endereco.class);
         Endereco enderecoCriado = enderecoRepository.create(enderecoEntity);
+        // --- RETORNO ---
         EnderecoDTO enderecoDTO = objectMapper.convertValue(enderecoCriado, EnderecoDTO.class);
+        String tipo = "create";
+        emailService.sendEmailEndereco(objectMapper.convertValue(pessoa, PessoaDTO.class), enderecoDTO, tipo);
         log.info("Endereço adicionado com sucesso!");
         return enderecoDTO;
     }
 
     public EnderecoDTO update(Integer idEndereco, EnderecoCreateDTO enderecoAtualizar) throws RegraDeNegocioException {
-        Pessoa pessoa = pessoaService.verifyByIdPessoa((enderecoAtualizar.getIdPessoa()));
         log.info("Atualizando endereço...");
+        Endereco enderecoRecuperado = verifyEnderecoById(idEndereco);
+        // --- ENTRADA ---
         Endereco enderecoEntity = objectMapper.convertValue(enderecoAtualizar, Endereco.class);
-        Endereco enderecoAtualizado = enderecoRepository.update(verifyEnderecoById(idEndereco), enderecoEntity);
-        EnderecoDTO enderecoDTO = objectMapper.convertValue(enderecoAtualizado, EnderecoDTO.class);
+        Pessoa pessoaRecuperada = pessoaService.verifyByIdPessoa(enderecoEntity.getIdPessoa());
+        getDadosEndereco(enderecoRecuperado, enderecoEntity);
         log.info("Endereco atualizado com sucesso!");
+        // --- RETORNO ---
+        EnderecoDTO enderecoDTO = objectMapper.convertValue(enderecoRecuperado, EnderecoDTO.class);
+        String tipo = "update";
+        emailService.sendEmailEndereco(objectMapper.convertValue(pessoaRecuperada, PessoaDTO.class), enderecoDTO, tipo);
         return enderecoDTO;
     }
 
     public void delete(Integer idEndereco) throws RegraDeNegocioException {
         log.info("Deletando endereço...");
-        enderecoRepository.delete(verifyEnderecoById(idEndereco));
+        Endereco enderecoRecuperado = verifyEnderecoById(idEndereco);
+        Pessoa pessoaRecuperada = pessoaService.verifyByIdPessoa(enderecoRecuperado.getIdPessoa());
+        enderecoRepository.list().remove(enderecoRecuperado);
         log.info("Endereço deletado com sucesso!");
+        String tipo = "delete";
+        emailService.sendEmailEndereco(objectMapper.convertValue(pessoaRecuperada, PessoaDTO.class), objectMapper.convertValue(enderecoRecuperado, EnderecoDTO.class), tipo);
     }
 
     public Endereco verifyEnderecoById(Integer idEndereco) throws RegraDeNegocioException {
@@ -69,21 +89,20 @@ public class EnderecoService {
     }
 
     public List<EnderecoDTO> listEnderecoByIdPessoa(Integer idPessoa) throws RegraDeNegocioException {
-//        return enderecoRepository.list().stream()
-//                .filter(endereco -> endereco.getIdPessoa().equals(idPessoa))
-//                .map(endereco -> objectMapper.convertValue(endereco, EnderecoDTO.class))
-//                .collect(Collectors.toList());
-        List<EnderecoDTO> enderecosDTO = new ArrayList<>();
-        List<Endereco> enderecos = enderecoRepository.list().stream()
-                .filter(endereco -> endereco.getIdPessoa().equals(idPessoa)).toList();
-        for (Endereco endereco : enderecos) {
-            enderecosDTO.add(objectMapper.convertValue(endereco, EnderecoDTO.class));
-        }
-        return enderecosDTO;
+        return enderecoRepository.list().stream()
+                .filter(endereco -> endereco.getIdPessoa().equals(idPessoa))
+                .map(endereco -> objectMapper.convertValue(endereco, EnderecoDTO.class))
+                .collect(Collectors.toList());
     }
 
-    public EnderecoDTO listEnderecoByIdEndereco(Integer idEndereco) throws RegraDeNegocioException {
-        Endereco enderecoEntity = verifyEnderecoById(idEndereco);
-        return objectMapper.convertValue(enderecoEntity, EnderecoDTO.class);
+    private void getDadosEndereco(Endereco enderecoRecuperado, Endereco enderecoEntity) {
+        enderecoRecuperado.setTipo(enderecoEntity.getTipo());
+        enderecoRecuperado.setLogradouro(enderecoEntity.getLogradouro());
+        enderecoRecuperado.setNumero(enderecoEntity.getNumero());
+        enderecoRecuperado.setComplemento(enderecoEntity.getComplemento());
+        enderecoRecuperado.setCep(enderecoEntity.getCep());
+        enderecoRecuperado.setCidade(enderecoEntity.getCidade());
+        enderecoRecuperado.setEstado(enderecoEntity.getEstado());
+        enderecoRecuperado.setPais(enderecoEntity.getPais());
     }
 }
